DevJourney/force-app/main/default/objects/Expense__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCIDENT REPORT CC</fullName>
            </value>
            <value>
                <fullName>ACCIDENT REPORT</fullName>
            </value>
            <value>
                <fullName>ADMINISTRATIVE FEE</fullName>
            </value>
            <value>
                <fullName>CD/DVD FEE</fullName>
            </value>
            <value>
                <fullName>CONFERENCE CALL FEE</fullName>
            </value>
            <value>
                <fullName>COPY SERVICE</fullName>
            </value>
            <value>
                <fullName>COURIER</fullName>
            </value>
            <value>
                <fullName>COURT COST</fullName>
            </value>
            <value>
                <fullName>COURT REPORTER</fullName>
            </value>
            <value>
                <fullName>DEPOSITION</fullName>
            </value>
            <value>
                <fullName>EVIDENCE EXPENSE</fullName>
            </value>
            <value>
                <fullName>EXPERT FEE</fullName>
            </value>
            <value>
                <fullName>FAX</fullName>
            </value>
            <value>
                <fullName>FILING FEE</fullName>
            </value>
            <value>
                <fullName>FIRM COST</fullName>
            </value>
            <value>
                <fullName>FOCUS GROUP</fullName>
            </value>
            <value>
                <fullName>INTEREST EXPENSE</fullName>
            </value>
            <value>
                <fullName>INVESTIGATION</fullName>
            </value>
            <value>
                <fullName>INVESTIGATOR FEE</fullName>
            </value>
            <value>
                <fullName>ISO CLAIM SEARCH</fullName>
            </value>
            <value>
                <fullName>MED RECORDS CC</fullName>
            </value>
            <value>
                <fullName>MEDIATION</fullName>
            </value>
            <value>
                <fullName>POSTAGE</fullName>
            </value>
            <value>
                <fullName>PRINTING</fullName>
            </value>
            <value>
                <fullName>PROCESS SERVICE FEE</fullName>
            </value>
            <value>
                <fullName>PROFESSIONAL SERVICES RENDERED</fullName>
            </value>
            <value>
                <fullName>RECORDS</fullName>
            </value>
            <value>
                <fullName>REFUND</fullName>
            </value>
            <value>
                <fullName>SCANNING FEE</fullName>
            </value>
            <value>
                <fullName>TRAVEL EXPENSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>